Добавил возможность добавления нескольких фотографий

--- a/css/style.css
+++ b/css/style.css
@@ -784,13 +784,24 @@ fieldset {
 .ad-form__photo {
   margin-right: 10px;
   margin-bottom: 10px;
+  overflow: hidden;
 
-  width: 70px;
-  height: 70px;
+  min-width: 70px;
+  max-width: 256px;
+  min-height: 70px;
 
   background-color: #e4e4de;
   border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
 }
+
+.ad-form__photo img {
+  width: 44px;
+  height: 40px;
+  margin: 10px;
+}
+
 
 .ad-form__element--submit {
   -ms-flex-preferred-size: 100%;
